frontend/test/should_fail/index_asArrayDescending_missing_where_index_expected.grg
rule i(ref s:array<Node>) {
	if{ nodesFromIndexAsArrayDescending(s).size() > 0; }
	
	modify {
	}
}
